[package]
name = "t-invest-sdk"
version = "0.12.0"
edition = "2024"
authors = ["Artem Evsevev <artem@qrsoft.ru>"]
description = "T-Bank Invest API SDK. Клиент для работы с T-Invest API Т-Банка (Tinkoff)."
license = "MIT"
readme = "README.md"
repository = "https://github.com/artemevsevev/t-invest-sdk"
keywords = ["trading", "tbank", "tinvest", "tinkoff", "sdk"]
categories = ["finance"]
exclude = ["investAPI/*"]

[dependencies]
prost = "0.14.1"
prost-types = "0.14.1"
rust_decimal = "1.38.0"
thiserror = "2.0.17"
tonic = { version = "0.14.2", features = [
    "tls-ring",
    "tls-native-roots",
    "gzip",
] }
tonic-prost = { version = "0.14.2"}
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
rust_decimal_macros = "1.38.0"
