[package]
name = "t-invest-sdk"
version = "0.17.2"
edition = "2024"
authors = ["Artem Evsevev <artem@qrsoft.ru>"]
description = "T-Bank Invest API SDK. Клиент для работы с T-Invest API Т-Банка (Tinkoff)."
license = "MIT"
readme = "README.md"
repository = "https://github.com/artemevsevev/t-invest-sdk"
keywords = ["trading", "tbank", "tinvest", "tinkoff", "sdk"]
categories = ["finance"]
exclude = ["investAPI/*"]

[dependencies]
prost = "0.14.3"
prost-types = "0.14.3"
rust_decimal = "1.42.0"
thiserror = "2.0.18"
tonic = { version = "0.14.6", features = [
    "tls-ring",
    "tls-webpki-roots",
    "gzip",
] }
tonic-prost = { version = "0.14.6" }
uuid = { version = "1.23.1", features = ["v4"] }
webpki-roots = "1.0.8"

[dev-dependencies]
rust_decimal_macros = "1.40.0"
